--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,10 @@ services:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - 5432:5432
     networks:
@@ -47,6 +49,7 @@ services:
 
 volumes:
   postgres_data:
+
 
 networks:
   app-network:
