--- a/proyecto-fastapi/.env-example
+++ b/proyecto-fastapi/.env-example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgresql://user:password@db/db_genairec
+DATABASE_URL=postgresql://admin:admin123@db/db_genairec
 
 # FastAPI
 SECRET_KEY=UPEU2024
