--- a/proyecto-fastapi/requirements.txt
+++ b/proyecto-fastapi/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.68.0
-uvicorn==0.15.0
-sqlalchemy==1.4.23
-pydantic[email,dotenv]==1.8.2
-python-jose==3.3.0
-passlib==1.7.4
-python-multipart==0.0.5
-psycopg2-binary==2.9.1
-python-dotenv==0.19.0
-docx
+fastapi
+uvicorn
+python-multipart
+pydantic
+python-dotenv
+openai
+PyPDF2
+tiktoken
+sqlalchemy
+pydantic_settings
+psycopg2
